--- a/package.json
+++ b/package.json
@@ -5,6 +5,6 @@
   "dependencies": {},
   "scripts": {
     "start": "flask --app app run",
-    "build": "pip install flask"
+    "build": "apt install python3-flask"
   }
 }
